# brain

./: CLAUDE.md  README.md
api/: Makefile  main.py  pyproject.toml
api/src/: db.py
orchestration/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
orchestration/src/orchestration/: assets.py  definitions.py  jobs.py  resources.py
orchestration/src/orchestration/agent/: __init__.py  file_manager_agent.py  hello_agent.py  local_agent.py  story_writer_agent.py
orchestration/src/orchestration/db/: README.md  assets.py  jobs.py  resources.py
orchestration/src/orchestration/db/connectivity_test/: assets.py  jobs.py
orchestration/src/orchestration/llm/: README.md  assets.py  resources.py
orchestration/src/orchestration/llm/connectivity_test/: assets.py  jobs.py
orchestration/src/orchestration/marketeer/: README.md  assets.py
orchestration/src/orchestration/marketeer/ingest/: assets.py  jobs.py  sp500_member_historical_data.py  sp500_members.py
orchestration/src/orchestration/marketeer/persistence/: assets.py
persistence/: README.md  docker-compose.yaml  example.env
ui/: package-lock.json
ui/src/: App.tsx
